putting into src folder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Assignments</h1>
-    <h2><a href="Assignment 0/asgn0.html">Assignment 0</a></h2>
+    <h2><a href="Assignment 0/src/asgn0.html">Assignment 0</a></h2>
 </body>
 </html>
