--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Assignments</h1>
     <h2><a href="Assignment 0/src/asgn0.html">Assignment 0</a></h2>
+    <h2><a href="Assignment 1/src/asgn1.html">Assignment 1</a></h2>
 </body>
 </html>
