--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Assignments</h1>
     <h2><a href="Assignment 0/src/asgn0.html">Assignment 0</a></h2>
     <h2><a href="Assignment 1/src/asgn1.html">Assignment 1</a></h2>
+    <h2><a href="Assignment 2/src/BlockAnimal.html">Assignment 2</a></h2>
 </body>
 </html>
